--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,12 +318,27 @@ section {
 # Footer
 --------------------------------------------------------------*/
 .foot {
-    background-color: transparent; /* Color de fondo */
-    color: #ffffff; /* Color del texto */
-    text-align: center; /* Alineación del texto */
-    padding: 20px 0; /* Espaciado interior */
-    font-size: 10px; /* Tamaño del texto */
+    background-color: transparent; 
+    color: #ffffff; 
+    text-align: center; 
+    padding: 20px 0;
+    font-size: 10px; 
 	position: fixed;
 	padding-top: 44%;
 	padding-left: 80%;
+}
+
+
+/*--------------------------------------------------------------
+# Phone view
+--------------------------------------------------------------*/
+@media (max-width: 1152px) {
+.section-title h2::after {
+    content: "";
+    width: 120px;
+    height: 0px;
+    display: inline-block;
+    background: #0073ba;
+    margin: 4px 10px;
+}
 }
